--- a/index.html
+++ b/index.html
@@ -2292,73 +2292,87 @@
                 <span class="number">21.</span>
                 <h2 class="section_title">
                   Анализ
-                  <a href="#" class="button">Краткости и понятности домена</a>
+                  <a href="#" class="button">WHOIS домена</a>
                   <br />
-                  сайта
+                  данных домена сайта
                   <!-- [wt_location get='region_name_prepositional'] {get}[/wt_location] -->
                 </h2>
                 <div class="hiden_text">
-                  <h2>Как выбор краткого и понятного домена сайта
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона помогает улучшить
-                    узнаваемость
+                  <h2>Как анализ WhoIs данных домена сайта <!-- [wt_location get='region_name_prepositional'] {get} -->
+                    вашего региона помогает в SEO проверке</h2>
+                  <p>WhoIs — это база данных, которая предоставляет информацию о владельцах доменов. Знание этих данных
+                    важно для оценки безопасности и доверия к сайту, а также для проверки законности использования
+                    домена.</p>
+
+                  <h2>Как аудит WhoIs данных домена сайта <!-- [wt_location get='region_name_prepositional'] {get} -->
+                    вашего региона влияет на SEO доверие</h2>
+                  <p>Аудит WhoIs данных позволяет выяснить, кто управляет доменом, а также проверить стабильность
+                    владельцев. Чистота этой информации играет ключевую роль в определении доверия поисковых систем к
+                    сайту.</p>
+
+                  <h2>Как проверка WhoIs данных домена сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона помогает выявить риски
                   </h2>
-                  <p>Краткий и легко запоминающийся домен делает сайт более доступным для пользователей, повышая
-                    узнаваемость бренда и упрощая повторное посещение ресурса.</p>
+                  <p>Проверка данных WhoIs предоставляет сведения о владельце домена, что помогает выявить возможные
+                    риски, например, использование домена в мошеннических целях или для спама. Это важная информация для
+                    обеспечения безопасности сайта.</p>
 
-                  <h2>Как аудит домена сайта <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона
-                    помогает выбрать простой и понятный адрес</h2>
-                  <p>Аудит домена помогает определить, насколько он соответствует целям бизнеса и удобен для
-                    запоминания, что важно для привлечения и удержания посетителей.</p>
+                  <h2>Как SEO анализ WhoIs данных домена сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона помогает улучшить
+                    безопасность</h2>
+                  <p>SEO анализ WhoIs позволяет оценить репутацию и безопасность домена. Если данные владельца скрыты
+                    или часто меняются, это может сигнализировать о возможных рисках для безопасности и авторитета сайта
+                    в поисковых системах.</p>
 
-                  <h2>Как проверка домена <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона
-                    влияет на доверие пользователей</h2>
-                  <p>Понятный и краткий домен вызывает больше доверия у пользователей, облегчая восприятие сайта и
-                    повышая вероятность перехода по ссылке.</p>
+                  <h2>Как SEO аудит WhoIs данных домена сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона повышает доверие</h2>
+                  <p>SEO аудит WhoIs данных помогает понять, как регулярная смена владельцев или скрытие контактной
+                    информации влияет на доверие к сайту. Прозрачность данных важна для повышения рейтинга в поисковой
+                    выдаче.</p>
 
-                  <h2>Как SEO анализ домена сайта <!-- [wt_location get='region_name_prepositional'] {get} --> вашего
-                    региона помогает улучшить позиции в поиске</h2>
-                  <p>Правильно подобранный домен с ключевыми словами улучшает SEO, повышая видимость сайта в поисковых
-                    системах и привлекая больше целевой аудитории.</p>
+                  <h2>Как SEO проверка WhoIs данных домена сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона защищает от фишинга</h2>
+                  <p>SEO проверка WhoIs позволяет определить, использовался ли домен для сомнительных целей, таких как
+                    фишинг. Также можно выявить связь с мошенническими действиями, что важным для безопасности и защиты
+                    сайта.</p>
 
-                  <h2>Как аудит домена сайта <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона
-                    помогает избежать сложностей с запоминанием</h2>
-                  <p>Аудит позволяет выявить длинные или сложные домены и предложить более удобные варианты, что снижает
-                    риск ошибок при вводе и улучшает пользовательский опыт.</p>
+                  <h2>Бесплатный анализ WhoIs данных домена сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона для SEO</h2>
+                  <p>Бесплатный анализ WhoIs данных позволяет узнать информацию о владельце домена и его истории. Это
+                    полезно для разрешения споров, проверки подлинности домена и оценки его безопасности.</p>
 
-                  <h2>Как проверка домена <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона
-                    помогает повысить конверсию</h2>
-                  <p>Простой и понятный домен способствует лучшему запоминанию сайта, что увеличивает количество прямых
-                    заходов и повышает конверсию.</p>
+                  <h2>Онлайн-анализ WhoIs данных домена сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона для поиска партнеров
+                  </h2>
+                  <p>Онлайн-анализ WhoIs помогает быстро узнать владельцев доменов и их контактную информацию. Это
+                    полезно для поиска партнеров, а также для анализа конкурентов или проверки правомерности
+                    использования домена.</p>
 
-                  <h2>Как бесплатный анализ домена сайта <!-- [wt_location get='region_name_prepositional'] {get} -->
-                    вашего региона помогает оптимизировать адрес сайта</h2>
-                  <p>Бесплатный анализ помогает оценить легкость восприятия и запоминания домена, что важно для
-                    успешного продвижения и узнаваемости бренда.</p>
+                  <h2>Как аудит продвижения сайта на основе WhoIs данных домена сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона помогает SEO оптимизации
+                  </h2>
+                  <p>Аудит продвижения на основе WhoIs данных помогает определить стабильность домена. Доверие к сайту
+                    растет, если владельцы прозрачны, а домен имеет хорошую историю, что положительно влияет на
+                    результаты SEO.</p>
 
-                  <h2>Как онлайн-проверка домена <!-- [wt_location get='region_name_prepositional'] {get} --> вашего
-                    региона способствует улучшению имиджа сайта</h2>
-                  <p>Онлайн-проверка позволяет быстро определить, насколько домен соответствует требованиям удобства и
-                    простоты, что положительно сказывается на имидже и доверии пользователей.</p>
+                  <h2>Как SEO аудит WhoIs данных домена сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона защищает от санкций</h2>
+                  <p>SEO аудит WhoIs данных помогает выявить риски, связанные с доменом, такие как скрытые контактные
+                    данные или частая смена владельцев. Эти факторы могут привести к санкциям от поисковых систем, если
+                    они вызывают подозрения.</p>
 
-                  <h2>Как аудит продвижения сайта <!-- [wt_location get='region_name_prepositional'] {get} --> вашего
-                    региона с учетом домена повышает эффективность маркетинга</h2>
-                  <p>Правильный выбор домена помогает маркетинговым кампаниям быть более успешными, снижая затраты на
-                    привлечение клиентов и улучшая узнаваемость.</p>
+                  <h2>Как SEO анализ WhoIs данных домена сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона повышает прозрачность
+                    сайта</h2>
+                  <p>SEO анализ на основе WhoIs данных помогает улучшить прозрачность и доверие к сайту. Проверка
+                    контактных данных и истории владельцев позволяет убедиться, что сайт соответствует стандартам и не
+                    вызывает подозрений у поисковых систем и пользователей.</p>
 
-                  <h2>Как SEO аудит домена сайта <!-- [wt_location get='region_name_prepositional'] {get} --> вашего
-                    региона помогает повысить рейтинг в поиске</h2>
-                  <p>SEO аудит домена выявляет возможности для улучшения его структуры и ключевых слов, что способствует
-                    повышению рейтинга сайта и увеличению трафика.</p>
-
-                  <h2>Как SEO анализ домена сайта <!-- [wt_location get='region_name_prepositional'] {get} --> вашего
-                    региона помогает улучшить взаимодействие с пользователями</h2>
-                  <p>Простой и понятный домен облегчает пользователям запоминание сайта и повторные визиты, что
-                    положительно влияет на вовлеченность и лояльность аудитории.</p>
-
-                  <h2>Как проверка домена на SEO <!-- [wt_location get='region_name_prepositional'] {get} --> вашего
-                    региона помогает повысить видимость в поисковых системах</h2>
-                  <p>Комплексная проверка домена на SEO помогает убедиться, что адрес сайта соответствует лучшим
-                    практикам и способствует улучшению позиций в поисковой выдаче.</p>
+                  <h2>Как проверка сайта на SEO и WhoIs данные домена сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона улучшает репутацию</h2>
+                  <p>Проверка сайта на SEO и WhoIs данные помогает анализировать репутацию домена. Важно проверить
+                    историю владельцев и наличие рисков для безопасности, чтобы обеспечить соответствие сайта
+                    требованиям поисковых систем и пользователей.</p>
 
                 </div>
 
@@ -3988,24 +4002,28 @@
                     SEO-анализ улучшает структуру и повышает доступность сайта.</p>
 
                   <h2>Оптимизация JavaScript-файлов на сайте
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона</h2>
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона
+                  </h2>
                   <p>Проверка и аудит JavaScript-файлов выявляет лишние скрипты, замедляющие сайт. Оптимизация кода,
                     объединение и удаление ненужных файлов улучшают производительность, безопасность и SEO, особенно
                     важно для мобильных пользователей.</p>
 
                   <h2>Анализ использования вложенных таблиц на сайте
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона</h2>
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона
+                  </h2>
                   <p>Вложенные таблицы увеличивают сложность DOM и замедляют загрузку. SEO-проверка позволяет упростить
                     структуру, ускорить работу сайта и сделать его доступным даже при медленном интернете.</p>
 
                   <h2>Оптимизация встроенных стилей на сайте
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона</h2>
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона
+                  </h2>
                   <p>Встроенные стили часто приводят к дублированию и замедлению загрузки. Их аудит и сокращение
                     повышают производительность и улучшают доступность сайта. SEO-анализ помогает устранить лишние
                     элементы и повысить позиции в поиске.</p>
 
                   <h2>Влияние SEO-проверки на производительность сайта
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона</h2>
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона
+                  </h2>
                   <p>Комплексный SEO-аудит CSS, JavaScript, таблиц и встроенных стилей улучшает технические параметры
                     сайта. Это снижает время отклика, ускоряет загрузку и повышает эффективность на всех устройствах.
                   </p>
@@ -4023,7 +4041,7 @@
                 </picture>
               </div>
             </div>
-           
+
             <div class="analytics_page_item d-flex align-items-center justify-content-between">
               <div class="item_image">
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
