--- a/index.html
+++ b/index.html
@@ -2319,25 +2319,29 @@
 
                   <h2>Как SEO анализ WhoIs данных домена сайта
                     <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона помогает улучшить
-                    безопасность</h2>
+                    безопасность
+                  </h2>
                   <p>SEO анализ WhoIs позволяет оценить репутацию и безопасность домена. Если данные владельца скрыты
                     или часто меняются, это может сигнализировать о возможных рисках для безопасности и авторитета сайта
                     в поисковых системах.</p>
 
                   <h2>Как SEO аудит WhoIs данных домена сайта
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона повышает доверие</h2>
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона повышает доверие
+                  </h2>
                   <p>SEO аудит WhoIs данных помогает понять, как регулярная смена владельцев или скрытие контактной
                     информации влияет на доверие к сайту. Прозрачность данных важна для повышения рейтинга в поисковой
                     выдаче.</p>
 
                   <h2>Как SEO проверка WhoIs данных домена сайта
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона защищает от фишинга</h2>
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона защищает от фишинга
+                  </h2>
                   <p>SEO проверка WhoIs позволяет определить, использовался ли домен для сомнительных целей, таких как
                     фишинг. Также можно выявить связь с мошенническими действиями, что важным для безопасности и защиты
                     сайта.</p>
 
                   <h2>Бесплатный анализ WhoIs данных домена сайта
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона для SEO</h2>
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона для SEO
+                  </h2>
                   <p>Бесплатный анализ WhoIs данных позволяет узнать информацию о владельце домена и его истории. Это
                     полезно для разрешения споров, проверки подлинности домена и оценки его безопасности.</p>
 
@@ -2356,20 +2360,23 @@
                     результаты SEO.</p>
 
                   <h2>Как SEO аудит WhoIs данных домена сайта
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона защищает от санкций</h2>
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона защищает от санкций
+                  </h2>
                   <p>SEO аудит WhoIs данных помогает выявить риски, связанные с доменом, такие как скрытые контактные
                     данные или частая смена владельцев. Эти факторы могут привести к санкциям от поисковых систем, если
                     они вызывают подозрения.</p>
 
                   <h2>Как SEO анализ WhoIs данных домена сайта
                     <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона повышает прозрачность
-                    сайта</h2>
+                    сайта
+                  </h2>
                   <p>SEO анализ на основе WhoIs данных помогает улучшить прозрачность и доверие к сайту. Проверка
                     контактных данных и истории владельцев позволяет убедиться, что сайт соответствует стандартам и не
                     вызывает подозрений у поисковых систем и пользователей.</p>
 
                   <h2>Как проверка сайта на SEO и WhoIs данные домена сайта
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона улучшает репутацию</h2>
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона улучшает репутацию
+                  </h2>
                   <p>Проверка сайта на SEO и WhoIs данные помогает анализировать репутацию домена. Важно проверить
                     историю владельцев и наличие рисков для безопасности, чтобы обеспечить соответствие сайта
                     требованиям поисковых систем и пользователей.</p>
@@ -5306,12 +5313,12 @@
               <img src="assets/images/blog1.png" alt="" />
               <div class="blog_item_body">
                 <h4 class="blog_item_title">
-                  8 самых важных типов ключевых слов для SEO
+                  8 самых важных типов ключевых слов для seo
                 </h4>
 
                 <p>
                   8 самых важных типов ключевых слов для SEO. 1. Исходные ключевые слова. Это основные ключевые фразы,
-                  которые определяют вашу специализацию и...
+                  которые определяют вашу специализацию и тематику...
                 </p>
                 <a href="https://seo.computer/ru/blog/seo-website-analysis-what-does-the-process-include"
                   class="blog_item_link d-flex align-items-center justify-content-center">Читать далее</a>
@@ -5321,7 +5328,7 @@
               <img src="assets/images/blog2.png" alt="" />
               <div class="blog_item_body">
                 <h4 class="blog_item_title">
-                  SEO-копирайтинг: как писать тексты для сайтов
+                  Seo-копирайтинг: как писать тексты для сайтов
                 </h4>
                 <p>
                   SEO-копирайтинг: как писать тексты для сайтов. SEO-тексты становятся сложнее. Ранее в поисковых
@@ -5335,11 +5342,11 @@
               <img src="assets/images/blog3.png" alt="" />
               <div class="blog_item_body">
                 <h4 class="blog_item_title">
-                  SEO-ошибка стоимостью сотни тысяч заказчику...
+                  Seo-ошибка стоимостью сотни тысяч заказчику...
                 </h4>
                 <p>
                   SEO-ошибка стоимостью сотни тысяч заказчику за 30 днейНемного предыстории. У заказчика сменился
-                  руководитель отдела, который решил заменить меня на д
+                  руководитель отдела, который решил заменить меня на...
                 </p>
                 <a href="https://seo.computer/ru/blog/free-seo-tools"
                   class="blog_item_link d-flex align-items-center justify-content-center">Читать далее</a>
@@ -5349,7 +5356,7 @@
               <img src="assets/images/blog4.png" alt="" />
               <div class="blog_item_body">
                 <h4 class="blog_item_title">
-                  SEO-шок! Эти 'бесполезные' ссылки...
+                  Seo-шок! Эти 'бесполезные' ссылки...
                 </h4>
                 <p>
                   SEO-шок! Эти 'бесполезные' ссылки могут поднять ваш сайт в ТОП. Проверено!. Ссылки Nofollow — это
@@ -5403,7 +5410,8 @@
               <div class="modal__contents_input">
                 <input type="url" class="form-control" placeholder="Адрес Вашего сайта" id="website" required />
               </div>
-              <button type="submit" class="button   ">Заказать исправление</button>
+              <button type="submit" class="button desctop">Заказать исправление</button>
+              <button type="submit" class="button mobile">Отправить</button>
             </div>
             <p class="policy mt-3">Оставляя заявку, вы соглашаетесь с <a
                 href="https://seo.computer/ru/policy">Политикой
