--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
               </div>
               <ul>
                 <li><a href="#dom_voz">Domain Age (возраст домена)</a></li>
-                <li><a href="#danie">Данные WHOIS домена</a></li>
+                <li><a href="#whois">Данные WHOIS домена</a></li>
                 <li><a href="#sxo_domen">Похожие домены (с такой же частью)</a></li>
               </ul>
             </div>
@@ -2174,118 +2174,9 @@
                 </picture>
               </div>
             </div>
-            <div id="cols" class="analytics_page_item d-flex align-items-center justify-content-between">
-              <div class="item_image">
-                <img src="assets/images/bg_item_img.png" alt="" class="bg" />
-                <picture>
-                  <source media="(max-width: 767px)" srcset="assets/images/mobile/20.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/desctop/20.png" />
-                  <img src="assets/images/desctop/20.png" alt="Adaptiv rasm" />
-                </picture>
-              </div>
+            <div id="whois" class="analytics_page_item d-flex align-items-center justify-content-between">
               <div class="analytics_page_item_left">
-                <div class="analytics_page_item_left_top text-end">
-                  <span class="number">20.</span>
-                  <h2 class="section_title">
-                    Анализ
-                    <a href="#" class="button">количества проиндексированных </a>
-                    <br />
-                    страниц сайта в поиске
-                    <!-- [wt_location get='region_name_prepositional'] {get}[/wt_location] -->
-                  </h2>
-                </div>
-                <div class="hiden_text text-end">
-                  <h2>Как анализ количества проиндексированных страниц сайта
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> помогает в SEO проверке
-                  </h2>
-                  <p>Количество проиндексированных страниц играет важную роль в поисковой видимости сайта. Чем больше
-                    страниц индексируется, тем лучше сайт представлен в поисковых системах. Низкий уровень индексации
-                    может указывать на проблемы, которые требуют немедленного исправления для улучшения SEO.</p>
-
-                  <h2>Как аудит количества проиндексированных страниц сайта
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> способствует улучшению SEO
-                  </h2>
-                  <p>Аудит количества проиндексированных страниц помогает выявить проблемы с архитектурой сайта,
-                    внутренними ссылками или настройками, мешающими индексации. Определив и устранив эти проблемы, можно
-                    значительно улучшить SEO-результаты.</p>
-
-                  <h2>Как проверка количества проиндексированных страниц сайта
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> анализирует видимость сайта
-                  </h2>
-                  <p>Проверка количества проиндексированных страниц позволяет оценить, насколько хорошо поисковые
-                    системы видят ваш сайт. Недостаточная индексация может указывать на проблемы, которые важно
-                    устранить для повышения видимости и SEO-эффективности.</p>
-
-                  <h2>Как SEO анализ количества проиндексированных страниц сайта
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> помогает улучшить структуру сайта
-                  </h2>
-                  <p>SEO анализ количества проиндексированных страниц позволяет выявить ошибки в структуре сайта и
-                    навигации. Это поможет понять, какие страницы индексируются, а какие нет, и скорректировать это для
-                    повышения видимости в поиске.</p>
-
-                  <h2>Как SEO аудит количества проиндексированных страниц сайта
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> увеличивает видимость сайта
-                  </h2>
-                  <p>Аудит количества проиндексированных страниц помогает определить слабые места в архитектуре сайта и
-                    внутренней ссылочной структуре. Исправление этих проблем позволит значительно повысить видимость
-                    сайта в поисковой выдаче.</p>
-
-                  <h2>Как SEO проверка количества проиндексированных страниц сайта
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> решает проблемы с индексацией
-                  </h2>
-                  <p>SEO проверка количества проиндексированных страниц помогает выявить, почему поисковые системы не
-                    могут индексировать все страницы сайта. Это может быть связано с техническими проблемами,
-                    настройками или ошибками, которые необходимо устранить для улучшения SEO.</p>
-
-                  <h2>Бесплатный анализ количества проиндексированных страниц сайта
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> для SEO
-                  </h2>
-                  <p>Бесплатный анализ проиндексированных страниц позволяет узнать, какие страницы вашего сайта доступны
-                    для индексации. Это поможет вам понять, как улучшить видимость сайта и устранить проблемы с
-                    индексацией.</p>
-
-                  <h2>Онлайн-анализ количества проиндексированных страниц сайта
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> для оптимизации SEO
-                  </h2>
-                  <p>Онлайн-анализ помогает точно оценить, какие страницы вашего сайта видят поисковые системы. Это
-                    позволит улучшить структуру и навигацию сайта, что способствует более быстрой и эффективной
-                    индексации.</p>
-
-                  <h2>Как аудит продвижения сайта с учетом проиндексированных страниц
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> улучшает SEO
-                  </h2>
-                  <p>Аудит продвижения на основе проиндексированных страниц помогает оптимизировать внутренние ссылки и
-                    настройки сайта. Исправление ошибок в мета-тегах и robots.txt обеспечит правильную индексацию всех
-                    страниц, что улучшит SEO результаты.</p>
-
-                  <h2>Как SEO аудит количества проиндексированных страниц сайта
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> повышает видимость
-                  </h2>
-                  <p>SEO аудит количества проиндексированных страниц помогает исправить ошибки, связанные с архитектурой
-                    сайта, и улучшить внутренние ссылки. Это способствует улучшению видимости сайта в поисковой выдаче и
-                    повышению его позиций.</p>
-
-                  <h2>Как SEO анализ количества проиндексированных страниц сайта
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> ускоряет улучшение SEO позиций
-                  </h2>
-                  <p>SEO анализ количества проиндексированных страниц помогает определить, насколько правильно настроен
-                    сайт для поисковых систем. Устранение проблем с индексацией поможет улучшить позиции в поисковой
-                    выдаче и ускорить продвижение сайта.</p>
-
-                  <h2>Как проверка сайта на SEO и количество проиндексированных страниц сайта
-                    <!-- [wt_location get='region_name_prepositional'] {get} --> улучшает поисковую видимость
-                  </h2>
-                  <p>Проверка сайта на SEO и количество проиндексированных страниц помогает выявить проблемы с
-                    индексацией и видимостью сайта. Устранение этих проблем ускоряет процесс продвижения и повышает
-                    позиции в поисковой выдаче.</p>
-                </div>
-
-                <a href="#" class="button no_bg">Развернуть текст</a>
-              </div>
-            </div>
-            <div class="analytics_page_item d-flex align-items-center justify-content-between">
-              <div class="analytics_page_item_left">
-                <span class="number">21.</span>
+                <span class="number">20.</span>
                 <h2 class="section_title">
                   Анализ
                   <a href="#" class="button">WHOIS домена</a>
@@ -2390,6 +2281,94 @@
                 </picture>
               </div>
             </div>
+            <div id="cols" class="analytics_page_item d-flex align-items-center justify-content-between">
+              <div class="item_image">
+                <img src="assets/images/bg_item_img.png" alt="" class="bg" />
+                <picture>
+                  <source media="(max-width: 767px)" srcset="assets/images/mobile/21.png" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/21.png" />
+                  <img src="assets/images/desctop/20.png" alt="Adaptiv rasm" />
+                </picture>
+              </div>
+              <div class="analytics_page_item_left">
+                <div class="analytics_page_item_left_top text-end">
+                  <span class="number">21.</span>
+                  <h2 class="section_title">
+                    Анализ
+                    <a href="#" class="button">Краткости и понятности домена</a>
+                    <br />
+                    сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}[/wt_location] -->
+                  </h2>
+                </div>
+                <div class="hiden_text text-end">
+                  <h2>Как выбор краткого и понятного домена сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона помогает улучшить
+                    узнаваемость</h2>
+                  <p>Краткий и легко запоминающийся домен делает сайт более доступным для пользователей, повышая
+                    узнаваемость бренда и упрощая повторное посещение ресурса.</p>
+
+                  <h2>Как аудит домена сайта <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона
+                    помогает выбрать простой и понятный адрес</h2>
+                  <p>Аудит домена помогает определить, насколько он соответствует целям бизнеса и удобен для
+                    запоминания, что важно для привлечения и удержания посетителей.</p>
+
+                  <h2>Как проверка домена <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона
+                    влияет на доверие пользователей</h2>
+                  <p>Понятный и краткий домен вызывает больше доверия у пользователей, облегчая восприятие сайта и
+                    повышая вероятность перехода по ссылке.</p>
+
+                  <h2>Как SEO анализ домена сайта <!-- [wt_location get='region_name_prepositional'] {get} --> вашего
+                    региона помогает улучшить позиции в поиске</h2>
+                  <p>Правильно подобранный домен с ключевыми словами улучшает SEO, повышая видимость сайта в поисковых
+                    системах и привлекая больше целевой аудитории.</p>
+
+                  <h2>Как аудит домена сайта <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона
+                    помогает избежать сложностей с запоминанием</h2>
+                  <p>Аудит позволяет выявить длинные или сложные домены и предложить более удобные варианты, что снижает
+                    риск ошибок при вводе и улучшает пользовательский опыт.</p>
+
+                  <h2>Как проверка домена <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона
+                    помогает повысить конверсию</h2>
+                  <p>Простой и понятный домен способствует лучшему запоминанию сайта, что увеличивает количество прямых
+                    заходов и повышает конверсию.</p>
+
+                  <h2>Как бесплатный анализ домена сайта <!-- [wt_location get='region_name_prepositional'] {get} -->
+                    вашего региона помогает оптимизировать адрес сайта</h2>
+                  <p>Бесплатный анализ помогает оценить легкость восприятия и запоминания домена, что важно для
+                    успешного продвижения и узнаваемости бренда.</p>
+
+                  <h2>Как онлайн-проверка домена <!-- [wt_location get='region_name_prepositional'] {get} --> вашего
+                    региона способствует улучшению имиджа сайта</h2>
+                  <p>Онлайн-проверка позволяет быстро определить, насколько домен соответствует требованиям удобства и
+                    простоты, что положительно сказывается на имидже и доверии пользователей.</p>
+
+                  <h2>Как аудит продвижения сайта <!-- [wt_location get='region_name_prepositional'] {get} --> вашего
+                    региона с учетом домена повышает эффективность маркетинга</h2>
+                  <p>Правильный выбор домена помогает маркетинговым кампаниям быть более успешными, снижая затраты на
+                    привлечение клиентов и улучшая узнаваемость.</p>
+
+                  <h2>Как SEO аудит домена сайта <!-- [wt_location get='region_name_prepositional'] {get} --> вашего
+                    региона помогает повысить рейтинг в поиске</h2>
+                  <p>SEO аудит домена выявляет возможности для улучшения его структуры и ключевых слов, что способствует
+                    повышению рейтинга сайта и увеличению трафика.</p>
+
+                  <h2>Как SEO анализ домена сайта <!-- [wt_location get='region_name_prepositional'] {get} --> вашего
+                    региона помогает улучшить взаимодействие с пользователями</h2>
+                  <p>Простой и понятный домен облегчает пользователям запоминание сайта и повторные визиты, что
+                    положительно влияет на вовлеченность и лояльность аудитории.</p>
+
+                  <h2>Как проверка домена на SEO <!-- [wt_location get='region_name_prepositional'] {get} --> вашего
+                    региона помогает повысить видимость в поисковых системах</h2>
+                  <p>Комплексная проверка домена на SEO помогает убедиться, что адрес сайта соответствует лучшим
+                    практикам и способствует улучшению позиций в поисковой выдаче.</p>
+
+                </div>
+
+                <a href="#" class="button no_bg">Развернуть текст</a>
+              </div>
+            </div>
+
             <div id="favicon" class="analytics_page_item d-flex align-items-center justify-content-between">
               <div class="item_image">
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
