--- a/index.html
+++ b/index.html
@@ -2175,7 +2175,15 @@
               </div>
             </div>
             <div id="whois" class="analytics_page_item d-flex align-items-center justify-content-between">
-              <div class="analytics_page_item_left">
+              <div class="item_image">
+                <img src="assets/images/bg_item_img.png" alt="" class="bg" />
+                <picture>
+                  <source media="(max-width: 767px)" srcset="assets/images/mobile/21.png" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/21.png" />
+                  <img src="assets/images/desctop/21.png" alt="Adaptiv rasm" />
+                </picture>
+              </div>
+              <div class="analytics_page_item_left text-end">
                 <span class="number">20.</span>
                 <h2 class="section_title">
                   Анализ
@@ -2272,26 +2280,12 @@
 
                 <a href="#" class="button no_bg">Развернуть текст</a>
               </div>
-              <div class="item_image">
-                <img src="assets/images/bg_item_img.png" alt="" class="bg" />
-                <picture>
-                  <source media="(max-width: 767px)" srcset="assets/images/mobile/21.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/desctop/21.png" />
-                  <img src="assets/images/desctop/21.png" alt="Adaptiv rasm" />
-                </picture>
-              </div>
+
             </div>
             <div id="cols" class="analytics_page_item d-flex align-items-center justify-content-between">
-              <div class="item_image">
-                <img src="assets/images/bg_item_img.png" alt="" class="bg" />
-                <picture>
-                  <source media="(max-width: 767px)" srcset="assets/images/mobile/21.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/desctop/21.png" />
-                  <img src="assets/images/desctop/20.png" alt="Adaptiv rasm" />
-                </picture>
-              </div>
+
               <div class="analytics_page_item_left">
-                <div class="analytics_page_item_left_top text-end">
+                <div class="analytics_page_item_left_top ">
                   <span class="number">21.</span>
                   <h2 class="section_title">
                     Анализ
@@ -2304,7 +2298,8 @@
                 <div class="hiden_text text-end">
                   <h2>Как выбор краткого и понятного домена сайта
                     <!-- [wt_location get='region_name_prepositional'] {get} --> вашего региона помогает улучшить
-                    узнаваемость</h2>
+                    узнаваемость
+                  </h2>
                   <p>Краткий и легко запоминающийся домен делает сайт более доступным для пользователей, повышая
                     узнаваемость бренда и упрощая повторное посещение ресурса.</p>
 
@@ -2367,8 +2362,15 @@
 
                 <a href="#" class="button no_bg">Развернуть текст</a>
               </div>
+              <div class="item_image">
+                <img src="assets/images/bg_item_img.png" alt="" class="bg" />
+                <picture>
+                  <source media="(max-width: 767px)" srcset="assets/images/mobile/21.png" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/21.png" />
+                  <img src="assets/images/desctop/20.png" alt="Adaptiv rasm" />
+                </picture>
+              </div>
             </div>
-
             <div id="favicon" class="analytics_page_item d-flex align-items-center justify-content-between">
               <div class="item_image">
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
